examples/test/testpolicy15159.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15159
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key3: value30
      key16: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value19
      podSelector:
        matchLabels:
          key10: value36
          key17: value48
          key43: value31
